--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'Layout.html' %}
 
-{% block title %}CsED{% endblock %}
+{% block title %}HOME{% endblock %}
 
 {% block content %}
         <h1 class="title text-center">Welcome page</h1>
