--- a/templates/search-show.html
+++ b/templates/search-show.html
@@ -1,6 +1,7 @@
 {% extends 'Layout.html' %}
 {% block title %}Search Show{% endblock %}
 {% block content %}
+    <h1 class="display-1 text-center">Search Show</h1>
     <div class="card text-center">
         <form action="/search" method="post">
             <label for="title_search">Search</label>
