--- a/static/style/card.css
+++ b/static/style/card.css
@@ -1,7 +1,8 @@
 .card {
     position: relative;
 
-    display: block;
+    display: flex;
+    justify-content: space-around;
 
     margin-bottom: 20px;
     padding: 24px;
