--- a/static/style/form.css
+++ b/static/style/form.css
@@ -1,11 +1,13 @@
 .form-element {
-    display: block;
+    display: flex;
+    justify-content: center;
 }
 
 .form-element-label {
     font-weight: bold;
 
-    display: inline-block;
+    display: flex;
+    justify-content: center;
 
     min-width: 150px;
     padding-right: 5px;
