--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>{% block title %}{% endblock %} - Film-e-ZZ</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico">
     <!-- Import Montserrat font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
@@ -21,7 +23,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a class="navbar-brand text-white">
-            <img id="header-logo" src="{{ url_for('static', filename='assets/movie-3.png') }}" width="30" height="30" class="d-inline-block align-top" alt="Film-e-ZZ Logo">
+            <img id="header-logo" src="{{ url_for('static', filename='assets/movie_icon.png') }}" width="30" height="30" class="d-inline-block align-top" alt="Film-e-ZZ Logo">
             Film-e-ZZ
         </a>
         <div class="collapse navbar-collapse" id="navbarText">
@@ -49,7 +51,7 @@
                     <a class="btn btn-secondary mx-1" href="{{ url_for('user_login') }}">Login</a>
                     {% else %}
                     <p class="text-center m-auto">Signed in {{ username }}</p>
-                    <a class="btn btn-secondary mx-1" href="{{ url_for('user_logout') }}">Logout</a>
+                    <a class="btn mx-1" href="{{ url_for('user_logout') }}"><i class="fa fa-sign-out" style="font-size:18px"></i></a>
                     {% endif %}
                 </form>
             </span>
