--- a/templates/Layout.html
+++ b/templates/Layout.html
@@ -14,44 +14,56 @@
     <!-- Normalize.css fixes lot of differences between browsers default styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"/>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     {% block head %}
     {% endblock %}
 </head>
 
-<body>
+<body style="background-image: url('../static/assets/BG_1_1024x1024.jpg');">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand text-white">
-            <img id="header-logo" src="{{ url_for('static', filename='assets/movie_icon.png') }}" width="30" height="30" class="d-inline-block align-top" alt="Film-e-ZZ Logo">
-            Film-e-ZZ
-        </a>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('index') }}">Shows List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('most_rated_shows') }}">Most Rated Shows</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('search_show_by_title') }}">Search By Title</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('get_all_actors') }}">Actors List</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('most_active_actors') }}">Most Active Actors</a>
-                </li>
-            </ul>
-            <span class="navbar-text">
-                <form class="d-flex flex-row">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white">
+                <img id="header-logo" src="{{ url_for('static', filename='assets/movie_icon.png') }}" width="30" height="30" class="d-inline-block align-top" alt="Film-e-ZZ Logo">
+                <a href="{{ url_for('index') }}" class="text-decoration-none fw-bold text-white">Film-e-ZZ</a>
+                |
+            </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('get_all_shows') }}">Shows List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('most_rated_shows') }}">Most Rated Shows</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('search_show_by_title') }}">Search By Title</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('get_all_actors') }}">Actors List</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('most_active_actors') }}">Most Active Actors</a>
+                    </li>
+                </ul>
+            </div>
+            <span class="navbar-text d-flex justify-content-end">
+                <form>
                     {% if 'username' not in session %}
                     <a class="btn btn-secondary mx-1" href="{{ url_for('user_registration') }}">Register</a>
                     <a class="btn btn-secondary mx-1" href="{{ url_for('user_login') }}">Login</a>
                     {% else %}
-                    <p class="text-center m-auto">Signed in {{ username }}</p>
-                    <a class="btn mx-1" href="{{ url_for('user_logout') }}"><i class="fa fa-sign-out" style="font-size:18px"></i></a>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ username }}
+                        </button>
+                        <ul class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#"><i class="fa fa-user me-2" aria-hidden="true"></i>Profile</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="fa fa-commenting me-2" aria-hidden="true"></i>Message</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('user_logout') }}"><i class="fa fa-sign-out me-2" aria-hidden="true"></i>Logout</a></li>
+                        </ul>
+                    </div>
                     {% endif %}
                 </form>
             </span>
