--- a/templates/most-active-actors.html
+++ b/templates/most-active-actors.html
@@ -7,7 +7,7 @@
         {% for actors in a_actors%}
         <div class="col-4">
             <div id="most-active-actor-small-card" class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top img-thumbnail" src="..." alt="Card image cap">
                 <div class="card-body" onmouseover="isAlive(this)" onmouseout="reset(this)">
                     {% if actors['age_of_death'] == None %}
                     <h5 class='card-title' data-alive="yes"><a href="/actor/{{ actors['id'] }}"> {{ actors['name'] }}</a>
