--- a/templates/edit-show-details.html
+++ b/templates/edit-show-details.html
@@ -31,9 +31,10 @@
                 <input type="text" class="form-control bg-dark text-white" name="show_trailer" placeholder="http://youtube.com/watch?v=kyDkHvi9yeI | no https://" value="{{ show_details['trailer'] }}"/>
                 <label for="show_trailer" class="form-label">Show Trailer URL</label>
             </div>
-            <div class="form-floating mt-2">
+            <div class="input-group form-floating mb-3 mt-2">
                 <input type="text" class="form-control bg-dark text-white" name="show_cover_pic" placeholder="https://m.media-amazon.com/images/I/71I7iM-kBiL._SS500_.jpg | Use only 500x500 pixel pictures" value="{{ show_details['cover_pic'] }}"/>
                 <label for="show_cover_pic" class="form-label">Show Cover art URL</label>
+                <a class="btn" href="https://www.google.com/search?q={{ show_details['title'] }}+series+cover+art&oq={{ show_details['title'] }}+series+cover+art&aqs=chrome..69i57j33i160.12572j0j4&sourceid=chrome&ie=UTF-8" target="_blank"><button class="btn btn-outline-secondary" type="button" id="button-addon2">Search on google</button></a>
             </div>
             <div class="form-floating mt-2">
                 <textarea class="form-control bg-dark text-white" name="show_overview" placeholder="Every villain has a noble cause, and every hero... " style="height: 100px;">{{ show_details['overview'] }}</textarea>
